added more descriptions

--- a/scraping/wordcloud.ipynb
+++ b/scraping/wordcloud.ipynb
@@ -355,6 +355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funding Categories"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
