added some notes/ideas on the overall project

--- a/scraping/wordcloud.ipynb
+++ b/scraping/wordcloud.ipynb
@@ -1,6 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes/Ideas\n",
+    "\n",
+    "### Need data!\n",
+    "\n",
+    "Streamline of data (for a live system):\n",
+    "- Grants\n",
+    "    - grants.gov\n",
+    "    - Pivot has more grants but has a no data mining policy (which is a problem if this system is used by Berkeley)\n",
+    "- Faculty Profiles\n",
+    "    - vcresearch.berkeley.edu\n",
+    "    - internal source of data that is not public (past research/grants given)\n",
+    "\n",
+    "### Data Representation\n",
+    "\n",
+    "Faculty Profile creation (goal: try to come up with a list of categories/hidden traits about grants/research that the faculty LIKE and DISLIKE):\n",
+    "- Field they are in/Department/Specialities\n",
+    "    - Do people in the field generally like certain things?\n",
+    "        -Government as their sponsor/want lots of grant money/cross-research/etc\n",
+    "- Past research\n",
+    "    - Analyze content of research news/name of research/categories of research\n",
+    "    - Do they do cross-field research?\n",
+    "    - Cost of grants of past research\n",
+    "    - Change over time of research concentration (ex. very first was bio, then bio tech, then tech)\n",
+    "    - Who did they work with/their fields of research\n",
+    "- Years of being a faculty/researcher (might make them more set on a certain field like Abbeel)\n",
+    "\n",
+    "Grants classification (goal: besides list of categories/find hidden traits):\n",
+    "- Category of funding\n",
+    "- Grant money\n",
+    "- Who is sponsoring (government, non-profit, etc), can find out from sponsor and possible email address (.gov)\n",
+    "- Elgibility check\n",
+    "- Get sentiment/hidden categories from opportunity title/description\n",
+    "\n",
+    "\n",
+    "### Model\n",
+    "\n",
+    "K-NN for clustering\n",
+    "\n",
+    "Feedback system is just updating the faculty profile (more resistant to change over time)\n",
+    "\n",
+    "\n",
+    "### Manual Search\n",
+    "\n",
+    "Come up with clear keywords/categories for grants"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
