--- a/modeling/classifying_grants.ipynb
+++ b/modeling/classifying_grants.ipynb
@@ -85,11 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -131,18 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_faculty = pd.read_csv('scraped_data/faculty_profiles.csv', sep='~')"
+    "df_faculty = pd.read_csv('../scraped_data/faculty_profiles.csv', sep='~')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +428,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -451,7 +459,7 @@
        "       'description_teaser_5'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -530,18 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_grants = pd.read_csv(\"scraped_data/research_grant_history_cleaned.csv\")"
+    "df_grants = pd.read_csv(\"../scraped_data/research_grant_history_cleaned.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +562,7 @@
        "       'Project Begin Date', 'Project End Date', 'Title'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3257,18 +3265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "grants_df = pd.read_csv('scraped_data/grants_gov.csv', sep='~')"
+    "grants_df = pd.read_csv('../scraped_data/grants_gov.csv', sep='~')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -3518,13 +3526,162 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "grants_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['OpportunityID', 'OpportunityTitle', 'OpportunityNumber',\n",
+       "       'OpportunityCategory', 'FundingInstrumentType',\n",
+       "       'CategoryOfFundingActivity', 'CategoryExplanation', 'CFDANumbers',\n",
+       "       'EligibleApplicants', 'AdditionalInformationOnEligibility',\n",
+       "       'AgencyCode', 'AgencyName', 'PostDate', 'CloseDate',\n",
+       "       'LastUpdatedDate', 'AwardCeiling', 'AwardFloor',\n",
+       "       'EstimatedTotalProgramFunding', 'ExpectedNumberOfAwards',\n",
+       "       'Description', 'Version', 'CostSharingOrMatchingRequirement',\n",
+       "       'ArchiveDate', 'GrantorContactEmail',\n",
+       "       'GrantorContactEmailDescription', 'GrantorContactText',\n",
+       "       'AdditionalInformationURL', 'AdditionalInformationText',\n",
+       "       'OpportunityCategoryExplanation', 'CloseDateExplanation'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grants_df.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                  25\n",
+       "1                                                  99\n",
+       "2                                                  25\n",
+       "3                                               06,12\n",
+       "4                                                  99\n",
+       "5        00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "6                                                  99\n",
+       "7        00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "8                                      06,12,13,20,25\n",
+       "9                                                  02\n",
+       "10                                                 99\n",
+       "11                            00,01,02,04,05,06,12,20\n",
+       "12                                                 25\n",
+       "13                                                 25\n",
+       "14                                                 25\n",
+       "15       00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "16                                                 25\n",
+       "17                                                 01\n",
+       "18                                                 12\n",
+       "19                                                 06\n",
+       "20                                              00,07\n",
+       "21                                                 25\n",
+       "22       00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "23                                                 04\n",
+       "24                                                 12\n",
+       "25                                                 00\n",
+       "26       00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "27                                                 99\n",
+       "28                                                 06\n",
+       "29                                                 25\n",
+       "                             ...                     \n",
+       "41506                                     01,02,04,12\n",
+       "41507    00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "41508                                              99\n",
+       "41509    00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "41510                                     01,02,04,12\n",
+       "41511                                              99\n",
+       "41512                                              25\n",
+       "41513                                        06,20,25\n",
+       "41514                00,01,02,04,06,07,11,12,20,22,25\n",
+       "41515                                              06\n",
+       "41516    00,01,02,04,05,06,07,08,11,12,13,20,22,23,25\n",
+       "41517                                           06,20\n",
+       "41518                                              25\n",
+       "41519                      00,01,02,04,07,11,12,25,99\n",
+       "41520                         00,01,02,04,07,11,12,25\n",
+       "41521                                           06,20\n",
+       "41522                                              13\n",
+       "41523                                              25\n",
+       "41524                                              99\n",
+       "41525                                           20,25\n",
+       "41526                                              06\n",
+       "41527                                              13\n",
+       "41528                                              12\n",
+       "41529                                              25\n",
+       "41530                                           07,11\n",
+       "41531                                           07,12\n",
+       "41532                                              99\n",
+       "41533                                              06\n",
+       "41534                                              12\n",
+       "41535                                              25\n",
+       "Name: EligibleApplicants, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grants_df['EligibleApplicants']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nanan = grants_df['ArchiveDate'][19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1647"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(grants_df[np.isnan(grants_df['ArchiveDate'])])"
    ]
   },
   {
