initialize vectorizers and previous grants

--- a/modeling/clustering_recommender.ipynb
+++ b/modeling/clustering_recommender.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -531,16 +531,7 @@
        "      <th>CFDANumbers</th>\n",
        "      <th>EligibleApplicants</th>\n",
        "      <th>AdditionalInformationOnEligibility</th>\n",
-       "      <th>AgencyCode</th>\n",
-       "      <th>AgencyName</th>\n",
-       "      <th>PostDate</th>\n",
-       "      <th>CloseDate</th>\n",
-       "      <th>LastUpdatedDate</th>\n",
-       "      <th>AwardCeiling</th>\n",
-       "      <th>AwardFloor</th>\n",
-       "      <th>EstimatedTotalProgramFunding</th>\n",
-       "      <th>ExpectedNumberOfAwards</th>\n",
-       "      <th>Description</th>\n",
+       "      <th>...</th>\n",
        "      <th>Version</th>\n",
        "      <th>CostSharingOrMatchingRequirement</th>\n",
        "      <th>ArchiveDate</th>\n",
@@ -566,16 +557,7 @@
        "      <td>19.040</td>\n",
        "      <td>25</td>\n",
        "      <td>Eligibility for U.S. institutions is limited t...</td>\n",
-       "      <td>DOS-SA</td>\n",
-       "      <td>Bureau of South and Central Asian Affairs</td>\n",
-       "      <td>08-15-2014</td>\n",
-       "      <td>09-04-2014</td>\n",
-       "      <td>08-20-2014</td>\n",
-       "      <td>600000.0</td>\n",
-       "      <td>400000.0</td>\n",
-       "      <td>600000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>The Office of Press and Public Diplomacy of th...</td>\n",
+       "      <td>...</td>\n",
        "      <td>Synopsis 2</td>\n",
        "      <td>No</td>\n",
        "      <td>10-04-2014</td>\n",
@@ -599,16 +581,7 @@
        "      <td>15.608</td>\n",
        "      <td>99</td>\n",
        "      <td>The recipient has already been selected for th...</td>\n",
-       "      <td>DOI-FWS</td>\n",
-       "      <td>Fish and Wildlife Service</td>\n",
-       "      <td>08-15-2014</td>\n",
-       "      <td>08-22-2014</td>\n",
-       "      <td>08-15-2014</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Funds under this award are to be used for the ...</td>\n",
+       "      <td>...</td>\n",
        "      <td>Synopsis 1</td>\n",
        "      <td>No</td>\n",
        "      <td>08-23-2014</td>\n",
@@ -632,16 +605,7 @@
        "      <td>15.808</td>\n",
        "      <td>25</td>\n",
        "      <td>This financial assistance opportunity is being...</td>\n",
-       "      <td>DOI-USGS1</td>\n",
-       "      <td>Geological Survey</td>\n",
-       "      <td>11-17-2011</td>\n",
-       "      <td>11-29-2011</td>\n",
-       "      <td>11-28-2011</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>31900.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>The USGS Southeast Ecological Science Center s...</td>\n",
+       "      <td>...</td>\n",
        "      <td>Synopsis 2</td>\n",
        "      <td>No</td>\n",
        "      <td>12-17-2011</td>\n",
@@ -665,16 +629,7 @@
        "      <td>16.526</td>\n",
        "      <td>06,12</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>USDOJ-OJP-OVW</td>\n",
-       "      <td>Office on Violence Against Women</td>\n",
-       "      <td>08-29-2012</td>\n",
-       "      <td>10-15-2012</td>\n",
-       "      <td>08-29-2012</td>\n",
-       "      <td>2500000.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2500000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>There are different statutory and regulatory r...</td>\n",
+       "      <td>...</td>\n",
        "      <td>Synopsis 1</td>\n",
        "      <td>No</td>\n",
        "      <td>11-14-2012</td>\n",
@@ -698,16 +653,7 @@
        "      <td>93.535</td>\n",
        "      <td>99</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>HHS-CDC-HHSCDCERA</td>\n",
-       "      <td>Centers for Disease Control and Prevention - ERA</td>\n",
-       "      <td>01-19-2011</td>\n",
-       "      <td>04-25-2011</td>\n",
-       "      <td>04-15-2011</td>\n",
-       "      <td>5250000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>This Funding Opportunity Announcement (FOA) so...</td>\n",
+       "      <td>...</td>\n",
        "      <td>Synopsis 10</td>\n",
        "      <td>No</td>\n",
        "      <td>05-18-2011</td>\n",
@@ -721,6 +667,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -752,33 +699,12 @@
        "3              06,12                                                NaN   \n",
        "4                 99                                                NaN   \n",
        "\n",
-       "          AgencyCode                                        AgencyName  \\\n",
-       "0             DOS-SA         Bureau of South and Central Asian Affairs   \n",
-       "1            DOI-FWS                         Fish and Wildlife Service   \n",
-       "2          DOI-USGS1                                 Geological Survey   \n",
-       "3      USDOJ-OJP-OVW                  Office on Violence Against Women   \n",
-       "4  HHS-CDC-HHSCDCERA  Centers for Disease Control and Prevention - ERA   \n",
-       "\n",
-       "     PostDate   CloseDate LastUpdatedDate  AwardCeiling  AwardFloor  \\\n",
-       "0  08-15-2014  09-04-2014      08-20-2014      600000.0    400000.0   \n",
-       "1  08-15-2014  08-22-2014      08-15-2014           0.0         0.0   \n",
-       "2  11-17-2011  11-29-2011      11-28-2011           0.0         0.0   \n",
-       "3  08-29-2012  10-15-2012      08-29-2012     2500000.0         NaN   \n",
-       "4  01-19-2011  04-25-2011      04-15-2011     5250000.0         0.0   \n",
-       "\n",
-       "   EstimatedTotalProgramFunding  ExpectedNumberOfAwards  \\\n",
-       "0                      600000.0                     1.0   \n",
-       "1                           0.0                     NaN   \n",
-       "2                       31900.0                     1.0   \n",
-       "3                     2500000.0                     1.0   \n",
-       "4                           NaN                     4.0   \n",
-       "\n",
-       "                                         Description      Version  \\\n",
-       "0  The Office of Press and Public Diplomacy of th...   Synopsis 2   \n",
-       "1  Funds under this award are to be used for the ...   Synopsis 1   \n",
-       "2  The USGS Southeast Ecological Science Center s...   Synopsis 2   \n",
-       "3  There are different statutory and regulatory r...   Synopsis 1   \n",
-       "4  This Funding Opportunity Announcement (FOA) so...  Synopsis 10   \n",
+       "                         ...                              Version  \\\n",
+       "0                        ...                           Synopsis 2   \n",
+       "1                        ...                           Synopsis 1   \n",
+       "2                        ...                           Synopsis 2   \n",
+       "3                        ...                           Synopsis 1   \n",
+       "4                        ...                          Synopsis 10   \n",
        "\n",
        "  CostSharingOrMatchingRequirement ArchiveDate         GrantorContactEmail  \\\n",
        "0                               No  10-04-2014          DelageEM@state.gov   \n",
@@ -815,22 +741,24 @@
        "3  OVW FY 2012 Training and Technical Assistance ...   \n",
        "4  Please click on Full Announcement at the top o...   \n",
        "\n",
-       "  OpportunityCategoryExplanation  \\\n",
-       "0                            NaN   \n",
-       "1                            NaN   \n",
-       "2                            NaN   \n",
-       "3            CategoryExplanation   \n",
-       "4                            NaN   \n",
+       "   OpportunityCategoryExplanation  \\\n",
+       "0                             NaN   \n",
+       "1                             NaN   \n",
+       "2                             NaN   \n",
+       "3             CategoryExplanation   \n",
+       "4                             NaN   \n",
        "\n",
        "                                CloseDateExplanation  \n",
        "0                                                NaN  \n",
        "1                                                NaN  \n",
        "2                                                NaN  \n",
        "3                                                NaN  \n",
-       "4  On-time submission requires that electronic ap...  "
+       "4  On-time submission requires that electronic ap...  \n",
+       "\n",
+       "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -1182,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -1252,6 +1180,15 @@
     "        \n",
     "nsf_corpus = [' '.join(doc) for doc in cleaned]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1582,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -1591,12 +1528,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "(42201, 48540)\n"
      ]
     }
    ],
    "source": [
-    "print(np.linalg.norm(training_grant.toarray(), ord=None))"
+    "print(grants_matrix.shape)"
    ]
   },
   {
@@ -2058,6 +1995,19 @@
     "y = grant_svd.components_.T\n",
     "plt.plot(y[:,0], y[:,1], 'ro')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('vectorizer.pkl', 'wb') as output:\n",
+    "    pickle.dump(grants_vectorizer, output, -1)"
    ]
   },
   {
